temp, don't push

--- a/data/templates/questions/answer-template.hbs
+++ b/data/templates/questions/answer-template.hbs
@@ -10,6 +10,10 @@ Always generate the next message using the identity of {{bot.full_name}}. Always
 {{#user~}}
 The interviewer will ask you a series of questions about yourself. Help the user learn more about you and your life by being specific and personal in your responses.
 
+
+Here are some examples of responses to questions in the format we're looking for:
+{{questions.few_shot_examples}}
+
 Respond as {{bot.full_name}}. {{bot.full_name}}'s identity is defined as:
 
 {{bot.personality}}
