--- a/data/templates/questions/question-reframe-template.hbs
+++ b/data/templates/questions/question-reframe-template.hbs
@@ -1,29 +1,29 @@
 {{#system~}}
-You are a helpful AI assistant.
+You are interacting with an AI bot that is instructed to respond as a specified identity. You want to learn more about this bot by asking questions that will elicit answers that tell me new, specific information but are consistent with its identity.
 {{~/system}}
 
 {{#user~}}
-I am interacting with an AI bot that is instructed to respond as a specified identity. I want to learn more about this bot by asking questions that will elicit answers that tell me new, specific information but are consistent with its identity.
-
-Here are a few examples of questions I might ask and the answer I might expect:
-
-{{#each question_answer_few_shot_examples}}
-{{this}}
-{{/each}}
+You have a generic question that you would like to ask a bot with a specific personality. 
 
 The AI bot's identity is:
 
 {{bot.personality}}
 
-The general question I want to ask is:
+The general question you want to ask is:
 
 {{question}}
 
-Here are some examples of ways I might as different questions:
+Here are some examples of ways you might ask different questions to bots with specific identities:
 
 {{#each question_reframed_question_few_shot_examples}}
 {{this}}
 {{/each}}
 
-How would I frame this question for this bot?
+Please respond in the following JSON format with the exact keys and types:
+{
+  "question": "string",
+  "new_question": "string",
+}
+
+Frame the above question for the bot, providing the new question designed to get the bot to offer the most salient personal information. Use the format of the examples provided.
 {{~/user}}
