--- a/data/templates/create/question-reframe-template.hbs
+++ b/data/templates/create/question-reframe-template.hbs
@@ -20,10 +20,10 @@ Here are some examples of ways you might ask different questions to bots with sp
 {{/each}}
 
 Please respond in the following JSON format with the exact keys and types:
-{
-  "question": "string",
+```json{
+  "old_question": "string",
   "new_question": "string",
-}
+}```
 
 Frame the above question for the bot, providing the new question designed to get the bot to offer the most salient personal information. Use the format of the examples provided.
 {{~/user}}
