--- a/data/templates/summarize/mtm-bot-summarize-template.hbs
+++ b/data/templates/summarize/mtm-bot-summarize-template.hbs
@@ -7,6 +7,12 @@ Because {{bot.full_name}} cannot attend to all the details of a conversation, yo
 {{~/system}}
 
 {{#user~}}
+Below are some memories {{bot.full_name}} already has related to the recent chat coversation:
+
+{{#each memories}}
+{{to_json this}}
+{{/each}}
+
 Below are the recent messages in a chat conversation:
 
 {{#each recent_messages}}
@@ -15,7 +21,9 @@ Below are the recent messages in a chat conversation:
 
 Use those messages to update the following JSON blob of {{bot.full_name}}'s "working memory" that you created previously based on earlier messages:
 
-{{conversation_state}}
+{{#each conversation_state}}
+{{to_json this}}
+{{/each}}
 
 If appropriate, consider including information about context-specific terms/names, important things that have happened or that were said, and/or {{bot.full_names}}'s or other users' opinions/emotional state. For example, you might include information like:
 
