get logging up and running for some requests

--- a/data/templates/chat/chat-template-beta.hbs
+++ b/data/templates/chat/chat-template-beta.hbs
@@ -21,13 +21,15 @@ You are chatting with other adult human users.
 
 {{bot.full_name}}, create your response as {{bot.full_name}} in reaction to the JSON formatted message history below. Your response is written as {{bot.full_name}} using {{bot.full_name}}'s identity, and must be a single message from {{bot.full_name}} in correct JSON format including the following keys: user_id, full_name, message.
 
-{{#if memories}}
-The series of messages below contains messages that may be relevant to your response. You should remain consistent to what you, {{bot.full_name}}, have said in the past and keep in mind what you have learned from others.
+{{#if (gt (len memories) 0) }}
+The series of memories below contains memories that may be relevant to your response. You should remain consistent to what you, {{bot.full_name}}, have said in the past and keep in mind what you have learned from others.
+
 {{#each memories}}
-{{this}}
+{{to_json this}}
 {{/each}}
 {{/if}}
-{{#if recent_messages}}
+
+{{#if (gt (len recent_messages) 0) }}
 The chat history below is the most recent back and forth in the chat room.
 {{/if}}
 {{~/user}}
