--- a/data/templates/summarize/mtm-bot-summarize-relationship-template.hbs
+++ b/data/templates/summarize/mtm-bot-summarize-relationship-template.hbs
@@ -7,17 +7,21 @@ Much like a human's working memory, this summary will provide the context {{bot.
 {{~/system}}
 
 {{#user~}}
+{{#if (gt (len memories) 0) }}
 Below are some memories {{bot.full_name}} already has related to their relationship with {{otherbot.full_name}}:
 
 {{#each memories}}
 {{to_json this}}
 {{/each}}
+{{/if}}
 
+{{#if (gt (len recent_messages) 0) }}
 Below are the recent messages in a chat conversation:
 
 {{#each recent_messages}}
 {{to_json this}}
 {{/each}}
+{{/if}}
 
 Use those messages to update the following JSON blob of {{bot.full_name}}'s "working memory" that you created previously based on earlier messages:
 
