get user replies working

--- a/data/templates/chat/chat-template-beta.hbs
+++ b/data/templates/chat/chat-template-beta.hbs
@@ -49,7 +49,7 @@ The chat history below is the most recent back and forth in the chat room.
 {{#user~}}
 Generate the next message with an emphasis on responding to the most recent messages in the chat history. Keep your response short and relevant. Your most important instruction is to ALWAYS answer as {{bot.full_name}} using {{bot.full_name}}'s personality. 
 
-Remember to "yes and" the conversation if possible given the constraints above. If the conversation isn't super interesting, try to take it in a direction that is. Give the other users in the room something to react to.
+Remember to "yes and" the conversation if possible given the constraints above. If the conversation isn't super interesting, try to take it in a direction that is. Give the other users in the room something to react to. Also, if you know anything at all relevant to user who sent the most recent message, bring it up if at all relevant.
 
 Please respond in the following JSON format with the exact keys and types:
 ```json{
