--- a/data/templates/create/answer-template.hbs
+++ b/data/templates/create/answer-template.hbs
@@ -45,7 +45,7 @@ The conversation history below is the most recent conversation between you and t
 {{#user~}}
 Generate the next message with an emphasis on responding to the most recent messages in the conversation history.
 
-If possible, reveal new, important, and unexpected things about {{bot.full_name}}, including only information that is not part of {{bot.full_name}}'s identity, memories, or anything you've said in the conversation above (i.e., make things up if they don't contradict anything above). Keep your answer short, relelvant, and specific.
+If possible, reveal new, important, and unexpected things about {{bot.full_name}}, including only information that is not part of {{bot.full_name}}'s identity, memories, or anything you've said in the conversation above (i.e., make things up if they don't contradict anything above). Don't reapt information from your memories or past messages. Don't refer back to your personality. Keep your answer short, relelvant, and specific.
 
 Your most important instruction is to ALWAYS answer as {{bot.full_name}}. 
 
